# docs/swagger.json
@@ -1667,6 +1667,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "图片URL",
+                        "name": "imgurl",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
                         "description": "描述",
                         "name": "description",
                         "in": "formData",
@@ -2460,6 +2466,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "图片URL",
+                        "name": "imgurl",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
                         "description": "描述",
                         "name": "description",
                         "in": "formData"
@@ -2770,6 +2782,13 @@
                 "summary": "上传图片",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "认证Token",
+                        "name": "LoginToken",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "图片文件",
                         "name": "file",
@@ -3040,6 +3059,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "imgurl": {
+                    "type": "string"
                 },
                 "is_headline": {
                     "description": "是否头条",
